# biophysicalop

./: README.md  pyproject.toml
src/: folium_test.ipynb
src/biophysical/: __main__.py
src/biophysicalop/: __main__.py  angles.py  constants.py  io.py  models.py  normalization.py  processing.py  utils.py  validation.py  xaffine.py
